<resources>
    <string name="app_name">On The House</string>
    <string name="email">Your Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password</string>
    <string name="login">LOGIN</string>
    <string name="reset_password"><u>Forgot Password</u></string>
    <string name="skip">View Offers</string>
    <string name="not_member">Not a member yet?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nickname</string>
    <string name="phone_number">Phone Number</string>
    <string name="state">State</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registerFirstName">First Name</string>
    <string name="registerLastName">Last Name</string>
    <string name="registerNickName">Nick Name</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerConfirmPassword">Confirm Password</string>
    <string name="registerButton">REGISTER</string>
    <string name="selectCountry">Select Country</string>
    <string name="skipLogin">Continue as Guest</string>
    <string name="signup">Signup</string>
    <string name="reset">Reset</string>
    <string name="offers_info">More info</string>
    <string name="offers_upgrade">Upgrade to Gold</string>
    <string name="offers_share">Share</string>
    <string name="regCountry">Add Country</string>
    <string name="registerCountry">Select Country</string>
    <string name="registerSelectState">Select State</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="OR">OR</string>
    <string name="state_prompt">State</string>
    <string name="reservations">My Reservations</string>
    <string name="name">Name</string>
    <string name="time">Date / Time</string>
    <string name="qty">Tickets / Qty</string>
    <string name="activities">Activities</string>
    <string name="editMemberTitle">Title</string>
    <string name="editMemberAge">Age</string>
    <string-array name="title_array">
        <item>Select Your Title</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Ms</item>
        <item>Dr</item>
    </string-array>
    <string-array name="age_array">
        <item>Select Your Age</item>
        <item>&#60; 15</item>
        <item>15-20</item>
        <item>21-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>51-60</item>
        <item>61-70</item>
        <item>71-80</item>
        <item>&#62; 80</item>
    </string-array>


    <string-array name="states_array">
        <item>VIC</item>
        <item>QLD</item>
        <item>TAS</item>
        <item>NSW</item>
        <item>WA</item>
        <item>SA</item>
    </string-array>

    <string name="title_activity_main_menu">MainMenu</string>
    <string name="full_price">Full Price :</string>
    <string name="oth_admin_fee">On The House Admin Fee :</string>
    <string name="shows">Shows</string>
    <string name="venue">Venue</string>
    <string name="first_heard_show">* Where have you first heard about this show?</string>
    <string name="answer">Answer</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="postcode">Postcode</string>
    <string name="test">Delivery Booking page</string>


    <string-array name="show_source_array">
        <item>Please select option</item>
        <item>Ticketek/TicketMaster/Moshtix</item>
        <item>Flyer</item>
        <item>Cafe</item>
        <item>Word of Mouth</item>
        <item>If Google search, what did you search for?</item>
        <item>Which website?</item>
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Please provide details of how you heard of this show?</item>
        <item>www.itsonthehouse.com</item>
        <item>ON THE HOUSE Newsletter</item>
        <item>Another Newsletter</item>
    </string-array>
    <string name="facebook_friends">Tell your friends on Facebook!</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_1">Next</string>
    <string name="title_activity_booking_page_delivery_purchase">BookingPageDeliveryPurchase
    </string>
    <string name="delivery_instructions">Please read below for instructions on how to receive your tickets
    </string>
    <string name="sending">We will be sending your tickets to your delivery \n address.
    </string>
    <string name="retrieve">We have retrieved the following mailing address for you. Please confirm this is the correct mailing address or update your mailing details here so we can post your tickets
    </string>
    <string name="payment_portal">Payment Portal</string>
    <string name="competition_page">Competition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">Change Password</string>
    <string name="updateButton">Update</string>
    <string name="regPhoneNumber">Phone Number</string>
    <string name="regStreet">Street</string>
    <string name="regCity">City</string>
    <string name="regPostCode">Post Code</string>
    <string name="editMemberAddress">Address</string>
    <string name="editMemberPhone">Phone</string>
    <string name="editMemberCity">City</string>
    <string name="title_activity_guest_main">GuestMain</string>
    <string name="title_guestoffers">Offers</string>
    <string name="title_guestOffering">Past Offering</string>
    <string name="title_guestsignup">Login/Register</string>
    <string name="my_past_offerings">Past Offerings</string>
    <string name="my_account">My Account</string>
    <string name="membership_label">Membership:</string>
    <string name="please_rate_event">Rate Event</string>
    <string name="rating">Rating</string>
    <string name="comments_here">Please provide your comments here</string>
    <string name="rate_event">Rate Event</string>
    <string name="past_reservations">Past Reservations</string>
    <string name="membership_heading">Membership</string>
    <string name="gold_radio_text">Gold: 6 Months - $55.90</string>
    <string name="bronze_radio_text">Bronze: 2 Years - Free</string>
    <string name="my_memberships">My Memberships</string>
    <string name="change_membership">Change Membership</string>
    <string name="level">Level: </string>
    <string name="period">Period:</string>
    <string name="price">Price:</string>
    <string name="no_membership_history">No membership history</string>
    <string name="no_reservations_available">You currently don\'t have any reservations</string>
    <string name="no_past_reservations_available">You don\'t have any past reservations</string>
    <string name="downgrade_message">Are you sure you want to change to Bronze membership?
        \nGold members keep our service alive.</string>
    <string name="gold_membership_details">As a Gold Member you  will have access to premium tickets on our site for a period of 6 months, these tickets will not incur an admin fee.
        \r\n\r\nYou can reserve tickets that are available for both Bronze and Gold Members. You do not pay an admin fee when you take up complimentary tickets.
        \r\n\r\nIf you want to reserve tickets provided to ON THE HOUSE at cut price, you will be charged the ON THE HOUSE ticket price.
        \r\n\r\nStay subscribed to our newsletters to receive our newsletter notifications.</string>
    <string name="bronze_membership_details">Bronze membership allows you to book tickets right throughout the year.
        \r\n\r\nA small admin charge of $5.98 may apply to reserve some give-aways or promotional tickets.
        \r\nIf you reserve tickets provided to ON THE HOUSE at cut price, you will be charged the ON THE HOUSE ticket price.
        \r\n\r\nYou can reserve tickets available for bronze members only.
        \r\n\r\nStay subscribed to our newsletters to receive our newsletter notifications.</string>
    <string name="paypal_client_id">ASYJ58EM8uChSD_3fil3tG4cBtlhfAkCNBsqyqynS6NY0qqCfBLz7uE4yu1x3s4caImMq9JBESwQ8w1U</string>
    <string name="paymentSummary">Payment Summary</string>
</resources>
