<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:material="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.onthehouse.onthehouse.PaymentPortal">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/deliveryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-81dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/delivery_instructions"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="8dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/sending"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="79dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/retrieve"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black"
            app:layout_constraintHorizontal_bias="0.529" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/first_name"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"

            android:hint="@string/street"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"

            android:hint="@string/city"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/street"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="7dp"

            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/street"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/postcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="@string/postcode"

            android:inputType="textPersonName"
            android:textColorHint="@android:color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/state"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"

            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/state"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"

            android:hint="@string/phone_number"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/email"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:met_floatingLabel="normal"
            app:met_floatingLabelTextColor="@color/red"
            app:met_primaryColor="@color/colorAccent"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/first_heard_show"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/spinner_edit_profile"
            android:popupBackground="@drawable/spinner_edit_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/elaborate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/black"
            android:ems="10"
            android:hint="@string/answer"
            android:inputType="textPersonName"
            android:visibility="gone"
            app:met_textColor="@android:color/black"
            app:met_textColorHint="@android:color/black"
            app:met_primaryColor="@color/colorAccent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent" />

        <cn.xm.weidongjian.progressbuttonlib.ProgressButton
            android:id="@+id/confirm_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_button"
            android:text="@string/confirm_1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/elaborate" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline4"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>